[gd_scene load_steps=17 format=4 uid="uid://phmodwumtahl"]

[ext_resource type="Script" uid="uid://rd2hbd32gk06" path="res://Scripts/Objects/roomScript.gd" id="1_d534u"]
[ext_resource type="TileSet" uid="uid://b6xkt4gowkr3s" path="res://TileSets/facilityTileSet.tres" id="2_qqq3a"]
[ext_resource type="TileSet" uid="uid://38g843gq00bl" path="res://TileSets/facilityDecoration.tres" id="3_rcfo7"]
[ext_resource type="PackedScene" uid="uid://blv5rb2td7brd" path="res://Objects/starterPod.tscn" id="7_b2fgm"]
[ext_resource type="PackedScene" uid="uid://dj2h6lwaa0s01" path="res://Objects/laser.tscn" id="7_f7go4"]
[ext_resource type="PackedScene" uid="uid://b8wtdwhlna4ln" path="res://Objects/endPod.tscn" id="8_ul63d"]
[ext_resource type="PackedScene" uid="uid://dhjixin4pocsq" path="res://Objects/player.tscn" id="10_bqyhr"]
[ext_resource type="AudioStream" uid="uid://c5e4der8168q8" path="res://Assets/Music/industrial.mp3" id="11_6h7iu"]
[ext_resource type="Texture2D" uid="uid://bfkcc2k4e88pf" path="res://Assets/Backgrounds/backo.png" id="12_tnqj4"]
[ext_resource type="Texture2D" uid="uid://r0lo4p0ni73w" path="res://Assets/Backgrounds/bulkhead-walls-back.png" id="13_y8g8e"]
[ext_resource type="Texture2D" uid="uid://dwlb7r3ytdrfy" path="res://Assets/Backgrounds/middle.png" id="14_6mjou"]
[ext_resource type="Texture2D" uid="uid://dfx4o2ol7m3sn" path="res://Assets/Backgrounds/bulkhead-walls-platform.png" id="15_roydc"]
[ext_resource type="AudioStream" uid="uid://djaxdxh1d3lns" path="res://Assets/SFX/win-176035.mp3" id="15_sjtgn"]
[ext_resource type="Texture2D" uid="uid://bu0mt5k7l54ib" path="res://Assets/Backgrounds/front.png" id="16_gr0be"]
[ext_resource type="Texture2D" uid="uid://k1n3pvmt72k" path="res://Assets/Backgrounds/bulkhead-walls-pipes.png" id="17_pm15e"]

[sub_resource type="LabelSettings" id="LabelSettings_uf1if"]
font_size = 30
font_color = Color(0, 0, 0, 1)

[node name="roomEasy0" type="Node2D"]
script = ExtResource("1_d534u")
nextRoomPath = "res://Rooms/roomMedium0.tscn"

[node name="Lasers" type="Node2D" parent="."]

[node name="Laser" parent="Lasers" instance=ExtResource("7_f7go4")]
position = Vector2(17, 73)
rotation = 1.5708
scale = Vector2(-3.28069, 52.8959)

[node name="walls" type="TileMapLayer" parent="."]
position = Vector2(-76, -245)
tile_map_data = PackedByteArray("AAD2//3/AAAAAAYAAAD2//7/AAAAAAcAAAD3//3/AAABAAYAAAD3//7/AAABAAcAAAD4//3/AAABAAMAAAD5//3/AAABAAMAAAD6//3/AAABAAMAAAD7//3/AAABAAMAAAD8//3/AAABAAMAAAD9//3/AAABAAMAAAD+//3/AAABAAMAAAD///3/AAABAAMAAAAAAP3/AAABAAMAAAABAP3/AAABAAMAAAACAP3/AAABAAMAAAADAP3/AAABAAMAAAAEAP3/AAABAAMAAAAFAP3/AAABAAMAAAAGAP3/AAABAAMAAAAHAP3/AAABAAMAAAAIAP3/AAABAAMAAAAJAP3/AAACAAYAAAAJAP7/AAACAAcAAAAKAP3/AAADAAYAAAAKAP7/AAADAAcAAAD3/wgAAAABAAUAAAD3/wkAAAAGAAEAAAD4/wkAAAABAAEAAAD5/wgAAAABAAAAAAD5/wkAAAABAAEAAAD6/wgAAAACAAAAAAD6/wkAAAACAAEAAAD2/wkAAAABAAIAAAD1/wkAAAAFAAIAAAD0/wkAAAAHAAIAAADz/wkAAAAGAAIAAADy/wkAAAACAAEAAADx/wkAAAACAAIAAADw/wkAAAABAAEAAADu/woAAAACAAEAAADu/wsAAAAGAAIAAADu/wwAAAAGAAIAAADu/w0AAAAHAAIAAADu/w4AAAACAAIAAADu/w8AAAABAAEAAADu/xAAAAABAAIAAADv/woAAAABAAIAAADv/wsAAAAHAAIAAADv/wwAAAAGAAEAAADv/w0AAAACAAEAAADv/w4AAAAGAAEAAADv/w8AAAABAAIAAADv/xAAAAAGAAEAAADw/woAAAABAAEAAADw/wsAAAACAAIAAADw/wwAAAAHAAIAAADw/w0AAAAHAAEAAADw/w4AAAAHAAEAAADw/w8AAAABAAEAAADw/xAAAAAHAAEAAADx/woAAAACAAEAAADx/wsAAAAGAAEAAADx/wwAAAABAAIAAADx/w0AAAABAAEAAADx/w4AAAACAAIAAADx/w8AAAAGAAIAAADx/xAAAAACAAEAAADy/woAAAAHAAIAAADy/wsAAAAHAAEAAADy/wwAAAAHAAEAAADy/w0AAAAHAAEAAADy/w4AAAAGAAEAAADy/w8AAAAHAAIAAADy/xAAAAAHAAIAAADz/woAAAAFAAIAAADz/wsAAAABAAIAAADz/wwAAAAHAAEAAADz/w0AAAAGAAIAAADz/w4AAAAGAAIAAADz/w8AAAACAAIAAADz/xAAAAAHAAIAAAD0/woAAAACAAEAAAD0/wsAAAACAAIAAAD0/wwAAAAGAAIAAAD0/w0AAAAGAAIAAAD0/w4AAAAHAAEAAAD0/w8AAAACAAEAAAD0/xAAAAAGAAEAAAD1/woAAAAGAAEAAAD1/wsAAAAFAAIAAAD1/wwAAAAGAAEAAAD1/w0AAAABAAIAAAD1/w4AAAABAAIAAAD1/w8AAAACAAIAAAD1/xAAAAACAAEAAAD2/woAAAAGAAEAAAD2/wsAAAAHAAEAAAD2/wwAAAAGAAEAAAD2/w0AAAACAAIAAAD2/w4AAAACAAIAAAD2/w8AAAAGAAIAAAD2/xAAAAABAAEAAAD3/woAAAAHAAEAAAD3/wsAAAAGAAEAAAD3/wwAAAAFAAIAAAD3/w0AAAAHAAEAAAD3/w4AAAAFAAIAAAD3/w8AAAABAAIAAAD3/xAAAAAGAAIAAADs/wgAAAABAAEAAADs/wkAAAAGAAIAAADs/woAAAABAAIAAADs/wsAAAACAAEAAADs/wwAAAABAAIAAADt/wgAAAACAAIAAADt/wkAAAAHAAIAAADt/woAAAAGAAEAAADt/wsAAAABAAIAAADt/wwAAAACAAIAAADu/wgAAAAHAAIAAADu/wkAAAAGAAEAAADv/wgAAAACAAEAAADv/wkAAAAHAAIAAADw/wgAAAAHAAIAAADx/wgAAAAGAAIAAADy/wgAAAAHAAIAAADz/wgAAAAHAAEAAAD0/wgAAAACAAEAAAD1/wgAAAAGAAEAAAD2/wgAAAAAAAUAAADt/wUAAAABAAIAAADt/wYAAAAHAAIAAADt/wcAAAAGAAEAAADu/wUAAAAHAAIAAADu/wYAAAABAAIAAADu/wcAAAAGAAEAAADv/wUAAAABAAEAAADv/wYAAAABAAEAAADv/wcAAAAHAAIAAADw/wUAAAACAAEAAADw/wYAAAABAAIAAADw/wcAAAABAAEAAADx/wUAAAACAAEAAADx/wYAAAAGAAIAAADx/wcAAAACAAIAAADy/wUAAAAHAAEAAADy/wYAAAAGAAIAAADy/wcAAAAHAAEAAADz/wUAAAAFAAIAAADz/wYAAAABAAEAAADz/wcAAAACAAEAAAD0/wUAAAACAAIAAAD0/wYAAAAHAAIAAAD0/wcAAAAHAAEAAAD1/wUAAAADAAEAAAD1/wYAAAADAAEAAAD1/wcAAAAEAAQAAADv/wQAAAACAAEAAADw/wQAAAACAAIAAADx/wQAAAAGAAEAAADy/wQAAAAGAAEAAADz/wQAAAAFAAIAAAD0/wQAAAABAAIAAAD1/wQAAAADAAEAAAD2/wcAAAAAAAQAAADv//v/AAABAAEAAADv//z/AAAGAAEAAADv//3/AAABAAIAAADv//7/AAAGAAEAAADv////AAABAAIAAADv/wAAAAACAAEAAADv/wEAAAABAAEAAADv/wIAAAABAAEAAADv/wMAAAACAAEAAADw//v/AAABAAEAAADw//z/AAAGAAIAAADw//3/AAABAAEAAADw//7/AAACAAIAAADw////AAAHAAIAAADw/wAAAAAHAAEAAADw/wEAAAAHAAEAAADw/wIAAAACAAIAAADw/wMAAAAHAAEAAADx//v/AAACAAEAAADx//z/AAABAAIAAADx//3/AAAGAAEAAADx//7/AAAHAAEAAADx////AAAFAAIAAADx/wAAAAAHAAEAAADx/wEAAAAFAAIAAADx/wIAAAAFAAIAAADx/wMAAAABAAIAAADy//v/AAACAAIAAADy//z/AAAGAAIAAADy//3/AAAGAAEAAADy//7/AAAGAAIAAADy////AAACAAIAAADy/wAAAAAGAAIAAADy/wEAAAAGAAEAAADy/wIAAAACAAIAAADy/wMAAAACAAEAAADz//v/AAABAAIAAADz//z/AAAHAAEAAADz//3/AAAFAAIAAADz//7/AAABAAIAAADz////AAAHAAIAAADz/wAAAAAGAAIAAADz/wEAAAACAAIAAADz/wIAAAAHAAEAAADz/wMAAAABAAEAAAD0//v/AAABAAEAAAD0//z/AAABAAIAAAD0//3/AAABAAEAAAD0//7/AAACAAEAAAD0////AAAGAAEAAAD0/wAAAAAFAAIAAAD0/wEAAAABAAEAAAD0/wIAAAABAAIAAAD0/wMAAAABAAEAAAD1////AAADAAEAAAD1/wAAAAADAAEAAAD1/wEAAAADAAEAAAD1/wIAAAADAAEAAAD1/wMAAAADAAEAAAD1//3/AAACAAEAAAD1//7/AAAEAAMAAADu//b/AAACAAEAAADu//f/AAAGAAIAAADu//j/AAABAAIAAADu//n/AAABAAIAAADu//r/AAAGAAEAAADu//v/AAAHAAIAAADu//z/AAAGAAEAAADv//b/AAAGAAIAAADv//f/AAAGAAEAAADv//j/AAAGAAIAAADv//n/AAAGAAEAAADv//r/AAABAAIAAADw//b/AAACAAIAAADw//f/AAACAAEAAADw//j/AAABAAIAAADw//n/AAAGAAIAAADw//r/AAAHAAEAAADx//b/AAAHAAIAAADx//f/AAAHAAEAAADx//j/AAACAAIAAADx//n/AAABAAIAAADx//r/AAAGAAEAAADy//b/AAAGAAEAAADy//f/AAAGAAEAAADy//j/AAABAAIAAADy//n/AAAHAAEAAADy//r/AAAHAAIAAADz//b/AAAHAAEAAADz//f/AAAHAAEAAADz//j/AAAHAAIAAADz//n/AAAGAAIAAADz//r/AAABAAIAAAD0//b/AAAHAAEAAAD0//f/AAABAAIAAAD0//j/AAAHAAEAAAD0//n/AAAGAAIAAAD0//r/AAAGAAEAAAD1//b/AAAHAAEAAAD1//f/AAACAAIAAAD1//j/AAABAAEAAAD1//n/AAABAAIAAAD1//r/AAABAAEAAAD1//v/AAAGAAEAAAD1//z/AAABAAEAAAD2//b/AAAHAAIAAAD2//f/AAACAAIAAAD2//j/AAAGAAEAAAD2//n/AAAGAAEAAAD2//r/AAAHAAEAAAD2//v/AAACAAIAAAD2//z/AAABAAIAAAD3//b/AAAHAAIAAAD3//f/AAAGAAIAAAD3//j/AAAGAAIAAAD3//n/AAACAAEAAAD3//r/AAAGAAEAAAD3//v/AAACAAEAAAD3//z/AAAHAAIAAAD4//b/AAACAAIAAAD4//f/AAABAAEAAAD4//j/AAABAAEAAAD4//n/AAACAAIAAAD4//r/AAAGAAEAAAD4//v/AAAHAAEAAAD4//z/AAABAAEAAAD5//b/AAACAAEAAAD5//f/AAAHAAIAAAD5//j/AAABAAIAAAD5//n/AAAHAAEAAAD5//r/AAACAAIAAAD5//v/AAABAAEAAAD5//z/AAAHAAEAAAD6//b/AAAGAAIAAAD6//f/AAAHAAIAAAD6//j/AAABAAIAAAD6//n/AAACAAEAAAD6//r/AAAGAAEAAAD6//v/AAAHAAIAAAD6//z/AAAHAAEAAAD7//b/AAACAAEAAAD7//f/AAAHAAIAAAD7//j/AAACAAEAAAD7//n/AAAGAAIAAAD7//r/AAACAAEAAAD7//v/AAAHAAIAAAD7//z/AAABAAEAAAD8//b/AAAGAAEAAAD8//f/AAAHAAEAAAD8//j/AAAHAAEAAAD8//n/AAAGAAIAAAD8//r/AAABAAIAAAD8//v/AAAHAAIAAAD8//z/AAABAAIAAAD9//b/AAAHAAEAAAD9//f/AAAHAAEAAAD9//j/AAACAAEAAAD9//n/AAACAAEAAAD9//r/AAAGAAIAAAD9//v/AAAGAAEAAAD9//z/AAAGAAEAAAD+//b/AAABAAIAAAD+//f/AAAHAAEAAAD+//j/AAAGAAEAAAD+//n/AAAGAAIAAAD+//r/AAABAAIAAAD+//v/AAAGAAEAAAD+//z/AAAGAAIAAAD///b/AAACAAIAAAD///f/AAAGAAEAAAD///j/AAAHAAEAAAD///n/AAAHAAEAAAD///r/AAAGAAEAAAD///v/AAAHAAEAAAD///z/AAAGAAIAAAAAAPb/AAAGAAEAAAAAAPf/AAACAAIAAAAAAPj/AAABAAIAAAAAAPn/AAAGAAEAAAAAAPr/AAAHAAIAAAAAAPv/AAAGAAIAAAAAAPz/AAABAAEAAAABAPb/AAABAAEAAAABAPf/AAACAAEAAAABAPj/AAAHAAIAAAABAPn/AAAHAAEAAAABAPr/AAACAAIAAAABAPv/AAAGAAEAAAABAPz/AAABAAIAAAACAPb/AAAHAAIAAAACAPf/AAAGAAEAAAACAPj/AAAHAAEAAAACAPn/AAAHAAEAAAACAPr/AAAGAAEAAAACAPv/AAABAAEAAAACAPz/AAAGAAEAAAADAPb/AAACAAEAAAADAPf/AAACAAIAAAADAPj/AAABAAEAAAADAPn/AAACAAEAAAADAPr/AAABAAEAAAADAPv/AAACAAEAAAADAPz/AAAHAAEAAAAEAPb/AAAHAAEAAAAEAPf/AAABAAEAAAAEAPj/AAAGAAEAAAAEAPn/AAABAAIAAAAEAPr/AAAHAAIAAAAEAPv/AAAHAAEAAAAEAPz/AAAHAAEAAAAFAPb/AAAGAAIAAAAFAPf/AAAGAAEAAAAFAPj/AAAGAAIAAAAFAPn/AAACAAEAAAAFAPr/AAAGAAIAAAAFAPv/AAACAAIAAAAFAPz/AAACAAIAAAAGAPb/AAACAAIAAAAGAPf/AAACAAEAAAAGAPj/AAAGAAIAAAAGAPn/AAACAAIAAAAGAPr/AAAHAAIAAAAGAPv/AAABAAEAAAAGAPz/AAACAAEAAAAHAPb/AAAHAAEAAAAHAPf/AAAHAAIAAAAHAPj/AAAGAAIAAAAHAPn/AAACAAIAAAAHAPr/AAAGAAEAAAAHAPv/AAABAAIAAAAHAPz/AAACAAIAAAAIAPb/AAAGAAIAAAAIAPf/AAACAAEAAAAIAPj/AAACAAIAAAAIAPn/AAABAAIAAAAIAPr/AAACAAIAAAAIAPv/AAAGAAEAAAAIAPz/AAABAAEAAAAJAPb/AAAGAAIAAAAJAPf/AAAGAAEAAAAJAPj/AAABAAEAAAAJAPn/AAAHAAIAAAAJAPr/AAABAAIAAAAJAPv/AAAGAAIAAAAJAPz/AAACAAIAAAAKAPb/AAACAAEAAAAKAPf/AAACAAIAAAAKAPj/AAABAAIAAAAKAPn/AAAHAAEAAAAKAPr/AAAGAAEAAAAKAPv/AAAHAAIAAAAKAPz/AAAGAAIAAAALAPb/AAABAAIAAAALAPf/AAACAAIAAAALAPj/AAAGAAIAAAALAPn/AAAHAAEAAAALAPr/AAABAAEAAAALAPv/AAACAAEAAAALAPz/AAACAAEAAAAMAPb/AAABAAIAAAAMAPf/AAAGAAIAAAAMAPj/AAAHAAEAAAAMAPn/AAACAAIAAAAMAPr/AAAHAAIAAAAMAPv/AAABAAIAAAAMAPz/AAAGAAIAAAANAPb/AAAHAAEAAAANAPf/AAAGAAIAAAANAPj/AAABAAEAAAANAPn/AAACAAEAAAANAPr/AAAHAAEAAAANAPv/AAACAAEAAAANAPz/AAAHAAIAAAAOAPb/AAAHAAIAAAAOAPf/AAACAAEAAAAOAPj/AAACAAIAAAAOAPn/AAACAAEAAAAOAPr/AAACAAIAAAAOAPv/AAACAAEAAAAOAPz/AAABAAIAAADp//z/AAABAAIAAADp//3/AAACAAIAAADp//7/AAACAAEAAADp////AAAGAAEAAADp/wAAAAACAAEAAADp/wEAAAACAAIAAADp/wIAAAAGAAIAAADp/wMAAAABAAEAAADp/wQAAAAGAAIAAADp/wUAAAAGAAEAAADq//z/AAACAAIAAADq//3/AAAHAAIAAADq//7/AAACAAEAAADq////AAAHAAIAAADq/wAAAAAGAAIAAADq/wEAAAACAAIAAADq/wIAAAABAAIAAADq/wMAAAACAAEAAADq/wQAAAAHAAEAAADq/wUAAAABAAIAAADr//z/AAABAAEAAADr//3/AAACAAEAAADr//7/AAABAAEAAADr////AAACAAEAAADr/wAAAAABAAIAAADr/wEAAAACAAEAAADr/wIAAAAHAAEAAADr/wMAAAAHAAIAAADr/wQAAAABAAIAAADr/wUAAAAHAAIAAADs//z/AAAGAAIAAADs//3/AAABAAIAAADs//7/AAACAAIAAADs////AAABAAIAAADs/wAAAAAGAAEAAADs/wEAAAACAAIAAADs/wIAAAAGAAIAAADs/wMAAAABAAIAAADs/wQAAAABAAIAAADs/wUAAAAHAAIAAADt//z/AAAGAAEAAADt//3/AAAGAAIAAADt//7/AAABAAIAAADt////AAABAAIAAADt/wAAAAACAAEAAADt/wEAAAACAAEAAADt/wIAAAAHAAEAAADt/wMAAAAHAAEAAADt/wQAAAAGAAEAAADu//3/AAAGAAIAAADu//7/AAACAAEAAADu////AAAHAAEAAADu/wAAAAAHAAEAAADu/wEAAAAGAAIAAADu/wIAAAACAAIAAADu/wMAAAAGAAIAAADu/wQAAAAHAAIAAADp//b/AAABAAIAAADp//f/AAACAAEAAADp//j/AAAGAAEAAADp//n/AAAHAAIAAADp//r/AAAGAAIAAADp//v/AAAGAAEAAADp/wYAAAAGAAIAAADp/wcAAAAHAAIAAADp/wgAAAAGAAEAAADp/wkAAAAGAAIAAADp/woAAAABAAEAAADp/wsAAAAGAAEAAADp/wwAAAABAAEAAADp/w0AAAABAAEAAADp/w4AAAAHAAIAAADp/w8AAAABAAIAAADp/xAAAAABAAEAAADq//b/AAACAAIAAADq//f/AAAGAAEAAADq//j/AAACAAEAAADq//n/AAAGAAIAAADq//r/AAAGAAEAAADq//v/AAABAAEAAADq/wYAAAACAAEAAADq/wcAAAACAAEAAADq/wgAAAACAAIAAADq/wkAAAACAAEAAADq/woAAAABAAEAAADq/wsAAAAGAAIAAADq/wwAAAABAAIAAADq/w0AAAAHAAEAAADq/w4AAAAHAAEAAADq/w8AAAACAAEAAADq/xAAAAAHAAEAAADr//b/AAAGAAEAAADr//f/AAACAAEAAADr//j/AAACAAIAAADr//n/AAAHAAEAAADr//r/AAAGAAIAAADr//v/AAAHAAEAAADr/wYAAAAGAAIAAADr/wcAAAACAAEAAADr/wgAAAAGAAEAAADr/wkAAAAGAAEAAADr/woAAAACAAEAAADr/wsAAAABAAEAAADr/wwAAAACAAIAAADr/w0AAAABAAIAAADr/w4AAAAGAAIAAADr/w8AAAAHAAEAAADr/xAAAAACAAEAAADs//b/AAABAAIAAADs//f/AAAGAAIAAADs//j/AAACAAIAAADs//n/AAACAAIAAADs//r/AAAHAAEAAADs//v/AAAHAAEAAADs/wYAAAAHAAIAAADs/wcAAAAGAAIAAADs/w0AAAABAAEAAADs/w4AAAAGAAEAAADs/w8AAAACAAIAAADs/xAAAAABAAEAAADt//b/AAAHAAEAAADt//f/AAAGAAIAAADt//j/AAACAAIAAADt//n/AAACAAEAAADt//r/AAACAAEAAADt//v/AAAGAAIAAADt/w0AAAAHAAEAAADt/w4AAAAHAAIAAADt/w8AAAACAAIAAADt/xAAAAABAAEAAAD4/woAAAABAAEAAAD4/wsAAAAGAAEAAAD5/woAAAABAAIAAAD5/wsAAAAGAAIAAAD6/woAAAACAAIAAAD6/wsAAAAHAAEAAAD7/wgAAAADAAAAAAD7/wkAAAADAAEAAAD7/woAAAADAAIAAAD7/wsAAAAEAAQAAAD3/wcAAAABAAQAAAD4/wwAAAAGAAIAAAD5/w0AAAAGAAEAAAD6/w0AAAACAAIAAAD7/w4AAAAGAAEAAAD8/w4AAAAGAAEAAAD9/w8AAAACAAEAAAD+/w8AAAACAAIAAAD//w8AAAAGAAIAAAAAAA8AAAAHAAEAAAABAA8AAAAGAAEAAAACABAAAAACAAEAAAADABAAAAABAAEAAAAEABAAAAAGAAEAAAAFABAAAAACAAEAAAAGABAAAAACAAIAAAAHABAAAAAHAAIAAAAIABAAAAAGAAIAAAAJABAAAAABAAEAAAAKABAAAAACAAIAAAALABAAAAACAAEAAAAMABAAAAAGAAEAAAANABAAAAACAAIAAAAOABAAAAAGAAEAAAAPABAAAAACAAIAAAAQABAAAAACAAIAAAARABAAAAACAAIAAAD4/w0AAAAHAAEAAAD4/w4AAAAHAAIAAAD4/w8AAAABAAIAAAD4/xAAAAABAAIAAAD5/wwAAAAGAAEAAAD5/w4AAAABAAIAAAD5/w8AAAAGAAIAAAD5/xAAAAACAAEAAAD6/wwAAAAGAAIAAAD6/w4AAAAGAAIAAAD6/w8AAAABAAEAAAD6/xAAAAABAAEAAAD7/wwAAAAGAAEAAAD7/w0AAAAGAAEAAAD7/w8AAAACAAEAAAD7/xAAAAAHAAIAAAD8/wwAAAABAAIAAAD8/w0AAAABAAIAAAD8/w8AAAAHAAIAAAD8/xAAAAABAAIAAAD9/wwAAAACAAEAAAD9/w0AAAABAAEAAAD9/w4AAAACAAEAAAD9/xAAAAAHAAIAAAD+/wwAAAACAAEAAAD+/w0AAAAHAAIAAAD+/w4AAAACAAEAAAD+/xAAAAAGAAEAAAD//wwAAAACAAEAAAD//w0AAAABAAIAAAD//w4AAAABAAEAAAD//xAAAAAGAAEAAAAAAAwAAAACAAIAAAAAAA0AAAAHAAIAAAAAAA4AAAABAAIAAAAAABAAAAAHAAIAAAABAAwAAAACAAIAAAABAA0AAAABAAIAAAABAA4AAAAHAAIAAAABABAAAAAGAAEAAAACAAwAAAAHAAIAAAACAA0AAAAHAAIAAAACAA4AAAAHAAIAAAACAA8AAAAGAAEAAAADAAwAAAAHAAIAAAADAA0AAAACAAEAAAADAA4AAAAGAAIAAAADAA8AAAABAAEAAAAEAAwAAAACAAIAAAAEAA0AAAABAAIAAAAEAA4AAAAHAAIAAAAEAA8AAAAGAAIAAAAFAAwAAAAGAAIAAAAFAA0AAAAHAAIAAAAFAA4AAAABAAEAAAAFAA8AAAABAAIAAAAGAAwAAAACAAEAAAAGAA0AAAACAAEAAAAGAA4AAAABAAEAAAAGAA8AAAACAAIAAAAHAAwAAAAHAAIAAAAHAA0AAAAGAAIAAAAHAA4AAAAHAAIAAAAHAA8AAAAHAAIAAAAIAAwAAAAGAAIAAAAIAA0AAAACAAIAAAAIAA4AAAAGAAIAAAAIAA8AAAAHAAIAAAAJAAwAAAAHAAIAAAAJAA0AAAABAAIAAAAJAA4AAAAGAAIAAAAJAA8AAAACAAEAAAAKAAwAAAABAAIAAAAKAA0AAAAGAAIAAAAKAA4AAAAHAAEAAAAKAA8AAAAHAAEAAAALAAwAAAAGAAEAAAALAA0AAAAHAAIAAAALAA4AAAACAAIAAAALAA8AAAAHAAEAAAAMAAwAAAABAAIAAAAMAA0AAAAHAAIAAAAMAA4AAAACAAEAAAAMAA8AAAABAAIAAAANAAwAAAACAAIAAAANAA0AAAAGAAEAAAANAA4AAAAHAAIAAAANAA8AAAAGAAEAAAAOAAwAAAAHAAIAAAAOAA0AAAAGAAEAAAAOAA4AAAABAAIAAAAOAA8AAAAGAAEAAAAPAAwAAAABAAEAAAAPAA0AAAABAAEAAAAPAA4AAAABAAIAAAAPAA8AAAABAAEAAAAQAAwAAAABAAIAAAAQAA0AAAAGAAIAAAAQAA4AAAACAAIAAAAQAA8AAAACAAEAAAARAAwAAAABAAEAAAARAA0AAAAHAAEAAAARAA4AAAAGAAIAAAARAA8AAAABAAIAAAD8/wsAAAABAAAAAAD9/wsAAAABAAAAAAD+/wsAAAABAAAAAAD//wsAAAABAAAAAAAAAAsAAAABAAAAAAABAAsAAAABAAAAAAACAAsAAAABAAAAAAADAAsAAAABAAAAAAAEAAsAAAABAAAAAAAFAAsAAAABAAAAAAAGAAsAAAABAAAAAAAHAAsAAAABAAAAAAAIAAsAAAABAAAAAAAJAAsAAAABAAAAAAALAAsAAAAFAAQAAAAMAAsAAAABAAEAAAANAAsAAAACAAEAAAAOAAsAAAACAAIAAAAPAAsAAAABAAIAAAAQAAsAAAACAAIAAAARAAsAAAACAAIAAAALAAgAAAAAAAAAAAALAAkAAAAAAAEAAAALAAoAAAAAAAIAAAAMAAgAAAABAAAAAAAMAAkAAAABAAEAAAAMAAoAAAABAAIAAAANAAgAAAACAAAAAAANAAkAAAACAAEAAAANAAoAAAABAAEAAAD+/wcAAAAFAAAAAAD//wcAAAAGAAAAAAAAAAcAAAAHAAAAAAAGAAcAAAAFAAAAAAAOAAgAAAACAAAAAAAOAAkAAAABAAEAAAAOAAoAAAACAAEAAAAKAAsAAAABAAAAAAAHAAcAAAAGAAAAAAALAP7/AAABAAMAAAAMAP7/AAABAAMAAAANAP7/AAABAAMAAAAOAP7/AAABAAMAAAAPAP7/AAABAAMAAAAQAP7/AAACAAYAAAAQAP//AAACAAcAAAARAP7/AAADAAYAAAARAP//AAADAAcAAAAPAAgAAAACAAAAAAAQAAgAAAACAAAAAAAPAAkAAAACAAEAAAAPAAoAAAABAAEAAAAIAAcAAAAHAAAAAAASAAAAAAAAAAEAAAASAAEAAAAAAAEAAAASAAIAAAAAAAEAAAASAAMAAAAAAAEAAAASAAQAAAAAAAEAAAASAAUAAAAAAAEAAAASAAYAAAAAAAEAAAASAAcAAAAAAAEAAAASAP//AAAEAAMAAAARAAgAAAACAAAAAAASAAgAAAAFAAQAAAAQAAoAAAACAAEAAAARAAoAAAACAAEAAAAQAAkAAAACAAEAAAARAAkAAAACAAEAAAAcABAAAAACAAIAAAAbABAAAAACAAEAAAAbAA8AAAACAAIAAAAaAA4AAAAGAAIAAAAaAA0AAAACAAIAAAAZAAwAAAACAAIAAAAZAAsAAAAGAAEAAAAYAAoAAAABAAIAAAAYAAkAAAABAAIAAAAXAAkAAAABAAEAAAAXAAgAAAACAAIAAAAXAAcAAAAGAAIAAAAWAAYAAAAHAAEAAAAWAAUAAAAGAAIAAAAWAAQAAAAGAAIAAAAWAAMAAAACAAIAAAAVAAMAAAAGAAIAAAAVAAIAAAAHAAIAAAAVAAEAAAACAAEAAAAVAAAAAAACAAEAAAAUAP//AAAGAAEAAAAUAP7/AAACAAIAAAAUAP3/AAABAAEAAAATAP3/AAACAAIAAAATAPz/AAAGAAIAAAATAP7/AAACAAEAAAATAP//AAAHAAIAAAATAAAAAAAGAAIAAAATAAEAAAAHAAEAAAATAAIAAAAHAAEAAAATAAMAAAAGAAIAAAATAAQAAAAHAAIAAAATAAUAAAAHAAEAAAATAAYAAAABAAIAAAATAAcAAAACAAEAAAATAAgAAAACAAIAAAATAAkAAAAGAAEAAAATAAoAAAACAAIAAAATAAsAAAAHAAIAAAATAAwAAAABAAIAAAATAA0AAAAGAAIAAAATAA4AAAACAAIAAAATAA8AAAAHAAIAAAATABAAAAAHAAIAAAAUAPz/AAACAAIAAAAUAAAAAAAHAAIAAAAUAAEAAAACAAEAAAAUAAIAAAAHAAEAAAAUAAMAAAACAAIAAAAUAAQAAAAGAAEAAAAUAAUAAAAHAAEAAAAUAAYAAAACAAIAAAAUAAcAAAABAAEAAAAUAAgAAAACAAEAAAAUAAkAAAABAAIAAAAUAAoAAAAGAAEAAAAUAAsAAAABAAIAAAAUAAwAAAABAAIAAAAUAA0AAAAHAAIAAAAUAA4AAAACAAEAAAAUAA8AAAABAAEAAAAUABAAAAAHAAEAAAAVAPz/AAAGAAEAAAAVAP3/AAABAAEAAAAVAP7/AAACAAIAAAAVAP//AAABAAEAAAAVAAQAAAAGAAEAAAAVAAUAAAAHAAIAAAAVAAYAAAACAAIAAAAVAAcAAAAGAAIAAAAVAAgAAAAHAAIAAAAVAAkAAAAHAAIAAAAVAAoAAAABAAIAAAAVAAsAAAAGAAEAAAAVAAwAAAAGAAEAAAAVAA0AAAAHAAIAAAAVAA4AAAABAAIAAAAVAA8AAAABAAIAAAAVABAAAAACAAEAAAAWAPz/AAAGAAEAAAAWAP3/AAAHAAIAAAAWAP7/AAABAAIAAAAWAP//AAACAAEAAAAWAAAAAAABAAEAAAAWAAEAAAAHAAEAAAAWAAIAAAACAAIAAAAWAAcAAAACAAEAAAAWAAgAAAAGAAIAAAAWAAkAAAAHAAEAAAAWAAoAAAAGAAIAAAAWAAsAAAACAAIAAAAWAAwAAAABAAEAAAAWAA0AAAACAAEAAAAWAA4AAAAGAAIAAAAWAA8AAAAHAAIAAAAWABAAAAAGAAIAAAAXAPz/AAAGAAEAAAAXAP3/AAAGAAEAAAAXAP7/AAAGAAIAAAAXAP//AAACAAIAAAAXAAAAAAAHAAIAAAAXAAEAAAAHAAEAAAAXAAIAAAABAAIAAAAXAAMAAAAHAAIAAAAXAAQAAAAHAAEAAAAXAAUAAAAHAAEAAAAXAAYAAAACAAEAAAAXAAoAAAACAAIAAAAXAAsAAAAHAAEAAAAXAAwAAAACAAIAAAAXAA0AAAAGAAIAAAAXAA4AAAACAAIAAAAXAA8AAAAGAAIAAAAXABAAAAAHAAEAAAAYAPz/AAAGAAIAAAAYAP3/AAABAAEAAAAYAP7/AAABAAEAAAAYAP//AAAHAAEAAAAYAAAAAAACAAEAAAAYAAEAAAABAAEAAAAYAAIAAAACAAIAAAAYAAMAAAABAAEAAAAYAAQAAAAHAAEAAAAYAAUAAAAGAAIAAAAYAAYAAAAGAAEAAAAYAAcAAAAHAAEAAAAYAAgAAAAHAAEAAAAYAAsAAAABAAEAAAAYAAwAAAACAAEAAAAYAA0AAAAHAAEAAAAYAA4AAAACAAIAAAAYAA8AAAAGAAIAAAAYABAAAAAHAAEAAAAZAPz/AAACAAIAAAAZAP3/AAAGAAEAAAAZAP7/AAACAAEAAAAZAP//AAAHAAIAAAAZAAAAAAACAAIAAAAZAAEAAAACAAIAAAAZAAIAAAAHAAIAAAAZAAMAAAAHAAIAAAAZAAQAAAABAAEAAAAZAAUAAAAHAAEAAAAZAAYAAAABAAIAAAAZAAcAAAABAAEAAAAZAAgAAAABAAEAAAAZAAkAAAAGAAEAAAAZAAoAAAACAAEAAAAZAA0AAAAHAAEAAAAZAA4AAAABAAEAAAAZAA8AAAACAAIAAAAZABAAAAAGAAEAAAAaAPz/AAABAAIAAAAaAP3/AAAHAAIAAAAaAP7/AAACAAIAAAAaAP//AAACAAIAAAAaAAAAAAAGAAEAAAAaAAEAAAACAAEAAAAaAAIAAAACAAEAAAAaAAMAAAAGAAIAAAAaAAQAAAAGAAEAAAAaAAUAAAAGAAEAAAAaAAYAAAAGAAIAAAAaAAcAAAABAAEAAAAaAAgAAAABAAIAAAAaAAkAAAAGAAIAAAAaAAoAAAABAAIAAAAaAAsAAAAHAAEAAAAaAAwAAAAHAAIAAAAaAA8AAAABAAIAAAAaABAAAAAGAAEAAAAbAPz/AAACAAIAAAAbAP3/AAAHAAIAAAAbAP7/AAACAAEAAAAbAP//AAABAAEAAAAbAAAAAAAHAAEAAAAbAAEAAAACAAEAAAAbAAIAAAAHAAEAAAAbAAMAAAACAAIAAAAbAAQAAAACAAIAAAAbAAUAAAACAAEAAAAbAAYAAAAGAAEAAAAbAAcAAAACAAIAAAAbAAgAAAAGAAEAAAAbAAkAAAAGAAEAAAAbAAoAAAACAAEAAAAbAAsAAAACAAEAAAAbAAwAAAABAAIAAAAbAA0AAAAGAAEAAAAbAA4AAAABAAIAAAAcAPz/AAAHAAEAAAAcAP3/AAAHAAEAAAAcAP7/AAAHAAIAAAAcAP//AAAHAAEAAAAcAAAAAAACAAIAAAAcAAEAAAABAAIAAAAcAAIAAAAGAAIAAAAcAAMAAAABAAEAAAAcAAQAAAACAAIAAAAcAAUAAAAHAAIAAAAcAAYAAAABAAIAAAAcAAcAAAAHAAIAAAAcAAgAAAACAAIAAAAcAAkAAAABAAIAAAAcAAoAAAAHAAEAAAAcAAsAAAACAAEAAAAcAAwAAAAHAAEAAAAcAA0AAAAGAAIAAAAcAA4AAAABAAEAAAAcAA8AAAAHAAIAAAASAAkAAAAHAAEAAAASAAoAAAAHAAEAAAASAAsAAAAGAAEAAAASAAwAAAACAAIAAAASAA0AAAAGAAEAAAASAA4AAAAHAAIAAAASAA8AAAAHAAIAAAASABAAAAAGAAIAAAALAP3/AAAHAAIAAAAMAP3/AAABAAIAAAANAP3/AAAGAAEAAAAOAP3/AAABAAIAAAAPAP3/AAACAAEAAAAQAP3/AAACAAEAAAARAP3/AAACAAIAAAASAP3/AAAGAAEAAAAPAPb/AAACAAIAAAAPAPf/AAABAAEAAAAPAPj/AAAHAAEAAAAPAPn/AAABAAIAAAAPAPr/AAAHAAEAAAAPAPv/AAAHAAEAAAAQAPb/AAAGAAEAAAAQAPf/AAABAAIAAAAQAPj/AAAGAAIAAAAQAPn/AAAGAAIAAAAQAPr/AAAGAAIAAAAQAPv/AAAGAAIAAAARAPb/AAABAAEAAAARAPf/AAAHAAIAAAARAPj/AAAHAAEAAAARAPn/AAAHAAIAAAARAPr/AAACAAEAAAARAPv/AAAHAAIAAAASAPb/AAACAAEAAAASAPf/AAABAAIAAAASAPj/AAABAAIAAAASAPn/AAAHAAEAAAASAPr/AAAGAAIAAAASAPv/AAAHAAIAAAATAPb/AAAGAAEAAAATAPf/AAABAAIAAAATAPj/AAACAAIAAAATAPn/AAAHAAEAAAATAPr/AAABAAEAAAATAPv/AAABAAIAAAAUAPb/AAACAAEAAAAUAPf/AAACAAEAAAAUAPj/AAAHAAIAAAAUAPn/AAACAAEAAAAUAPr/AAABAAIAAAAUAPv/AAABAAIAAAAVAPb/AAAGAAIAAAAVAPf/AAAGAAIAAAAVAPj/AAABAAIAAAAVAPn/AAACAAIAAAAVAPr/AAABAAEAAAAVAPv/AAABAAEAAAAWAPb/AAAGAAIAAAAWAPf/AAAGAAIAAAAWAPj/AAAHAAEAAAAWAPn/AAABAAIAAAAWAPr/AAAHAAEAAAAWAPv/AAABAAEAAAAXAPb/AAAGAAEAAAAXAPf/AAACAAEAAAAXAPj/AAABAAEAAAAXAPn/AAAHAAEAAAAXAPr/AAACAAEAAAAXAPv/AAACAAIAAAAYAPb/AAAGAAEAAAAYAPf/AAABAAEAAAAYAPj/AAAHAAIAAAAYAPn/AAABAAEAAAAYAPr/AAACAAIAAAAYAPv/AAAGAAEAAAAZAPb/AAAHAAEAAAAZAPf/AAABAAIAAAAZAPj/AAAHAAEAAAAZAPn/AAAHAAIAAAAZAPr/AAAHAAEAAAAZAPv/AAABAAEAAAAaAPb/AAAGAAEAAAAaAPf/AAABAAIAAAAaAPj/AAABAAIAAAAaAPn/AAACAAEAAAAaAPr/AAAGAAIAAAAaAPv/AAAGAAIAAAAbAPb/AAABAAIAAAAbAPf/AAAGAAEAAAAbAPj/AAAGAAEAAAAbAPn/AAAHAAEAAAAbAPr/AAAGAAIAAAAbAPv/AAABAAIAAAASAPz/AAABAAEAAAASAP7/AAACAAEAAAAPAPz/AAABAAEAAAAQAPz/AAAGAAEAAAARAPz/AAACAAEAAAAcAPb/AAAGAAEAAAAcAPf/AAABAAIAAAAcAPj/AAAGAAEAAAAcAPn/AAAGAAIAAAAcAPr/AAABAAIAAAAcAPv/AAAHAAEAAAD4/wgAAAACAAAAAAA=")
tile_set = ExtResource("2_qqq3a")

[node name="decorations" type="TileMapLayer" parent="."]
position = Vector2(-76, -245)
tile_map_data = PackedByteArray("AAD8/woAAAABAAAAAAD//woAAAAAAAAAAAADAAoAAAAAAAAAAAAIAAoAAAAAAAAAAAAFAAoAAAACAAEAAAD6/wcAAAAAAAEAAAARAAcAAAABAAEAAAAMAAcAAAACAAIAAAA=")
tile_set = ExtResource("3_rcfo7")

[node name="RoomObjects" type="Node2D" parent="."]

[node name="Spikes" type="Node2D" parent="RoomObjects"]

[node name="Start-End-Points" type="Node2D" parent="RoomObjects"]

[node name="StarterPod" parent="RoomObjects/Start-End-Points" instance=ExtResource("7_b2fgm")]
position = Vector2(-285, -3)
scale = Vector2(0.576396, 0.579388)

[node name="EndPod" parent="RoomObjects/Start-End-Points" instance=ExtResource("8_ul63d")]
position = Vector2(438, -13)

[node name="Platforms" type="Node2D" parent="RoomObjects"]

[node name="MagneticFields" type="Node2D" parent="RoomObjects"]

[node name="JumpPads" type="Node2D" parent="RoomObjects"]

[node name="Player" parent="." instance=ExtResource("10_bqyhr")]
position = Vector2(-111, -205)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Player"]
position = Vector2(111, 205)
stream = ExtResource("11_6h7iu")
max_distance = 1e+10

[node name="NextRoomUI" type="Control" parent="Player"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -124.0
offset_top = -70.0
offset_right = -124.0
offset_bottom = -70.0

[node name="ColorRect" type="ColorRect" parent="Player/NextRoomUI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(6.67304, 3.72253)
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="Player/NextRoomUI"]
layout_mode = 0
offset_left = 5.0
offset_top = 3.0
offset_right = 45.0
offset_bottom = 43.0
scale = Vector2(6.41819, 3.55758)
color = Color(0, 0.713726, 0.564706, 1)

[node name="clear" type="Label" parent="Player/NextRoomUI"]
layout_mode = 0
offset_left = 3.0
offset_top = 6.0
offset_right = 261.68
offset_bottom = 48.0
text = "ROOM CLEARED"
label_settings = SubResource("LabelSettings_uf1if")
horizontal_alignment = 1
vertical_alignment = 1

[node name="nextRoom" type="Button" parent="Player/NextRoomUI"]
modulate = Color(1, 1, 0, 1)
layout_mode = 0
offset_left = 71.0
offset_top = 63.0
offset_right = 187.0
offset_bottom = 94.0
text = "NEXT ROOM"
flat = true

[node name="retryRoom" type="Button" parent="Player/NextRoomUI"]
modulate = Color(1, 1, 0, 1)
layout_mode = 0
offset_left = 72.0
offset_top = 89.0
offset_right = 188.0
offset_bottom = 120.0
text = "RETRY ROOM"
flat = true

[node name="RetryUI" type="Control" parent="Player"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -124.0
offset_top = -70.0
offset_right = -84.0
offset_bottom = -30.0

[node name="ColorRect" type="ColorRect" parent="Player/RetryUI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(6.67304, 3.72253)
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="Player/RetryUI"]
layout_mode = 0
offset_left = 5.0
offset_top = 3.0
offset_right = 45.0
offset_bottom = 43.0
scale = Vector2(6.41819, 3.55758)
color = Color(0, 0.713726, 0.564706, 1)

[node name="clear" type="Label" parent="Player/RetryUI"]
layout_mode = 0
offset_left = 3.0
offset_top = 6.0
offset_right = 261.68
offset_bottom = 48.0
text = "ROOM FAILED"
label_settings = SubResource("LabelSettings_uf1if")
horizontal_alignment = 1
vertical_alignment = 1

[node name="retryRoom" type="Button" parent="Player/RetryUI"]
modulate = Color(1, 1, 0, 1)
layout_mode = 0
offset_left = 69.0
offset_top = 75.0
offset_right = 185.0
offset_bottom = 106.0
text = "RETRY ROOM"
flat = true

[node name="ParallexBackgrounds" type="ParallaxBackground" parent="."]

[node name="backMachinery" type="ParallaxLayer" parent="ParallexBackgrounds"]
visible = false
motion_scale = Vector2(0.38, 0.38)
motion_mirroring = Vector2(1440, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallexBackgrounds/backMachinery"]
scale = Vector2(5, 5)
texture = ExtResource("12_tnqj4")

[node name="backStorageRoom" type="ParallaxLayer" parent="ParallexBackgrounds"]
motion_scale = Vector2(0.38, 0.38)
motion_mirroring = Vector2(1440, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallexBackgrounds/backStorageRoom"]
position = Vector2(-52, -67)
scale = Vector2(3, 3)
texture = ExtResource("13_y8g8e")

[node name="middlePods" type="ParallaxLayer" parent="ParallexBackgrounds"]
visible = false
motion_scale = Vector2(0.76, 0.76)
motion_mirroring = Vector2(1440, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallexBackgrounds/middlePods"]
scale = Vector2(3, 3)
texture = ExtResource("14_6mjou")

[node name="middleMetalPlatform" type="ParallaxLayer" parent="ParallexBackgrounds"]
visible = false
motion_scale = Vector2(0.76, 0.76)
motion_mirroring = Vector2(1440, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallexBackgrounds/middleMetalPlatform"]
scale = Vector2(3, 3)
texture = ExtResource("15_roydc")

[node name="frontBeams" type="ParallaxLayer" parent="ParallexBackgrounds"]
visible = false
motion_scale = Vector2(0.93, 0.93)
motion_mirroring = Vector2(1440, 0)

[node name="Sprite2D2" type="Sprite2D" parent="ParallexBackgrounds/frontBeams"]
scale = Vector2(3, 3)
texture = ExtResource("16_gr0be")

[node name="frontPipes" type="ParallaxLayer" parent="ParallexBackgrounds"]
motion_scale = Vector2(0.93, 0.93)
motion_mirroring = Vector2(1440, 0)

[node name="Sprite2D2" type="Sprite2D" parent="ParallexBackgrounds/frontPipes"]
scale = Vector2(3, 3)
texture = ExtResource("17_pm15e")

[node name="winSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_sjtgn")
volume_db = 24.0

[connection signal="promptEndScreen" from="Player" to="." method="_on_player_prompt_end_screen"]
[connection signal="pressed" from="Player/NextRoomUI/nextRoom" to="." method="_on_next_room_pressed"]
[connection signal="pressed" from="Player/NextRoomUI/retryRoom" to="." method="_on_retry_room_pressed"]
[connection signal="pressed" from="Player/RetryUI/retryRoom" to="." method="_on_retry_room_pressed"]
